
- corMatWizard is a new function that opens a Java dialog for
  correlation matrix creation.
  
- Fixed a rather unimportant bug that unintended entering of 
  Infinity (e.g. 2/0) causes a loop of error messages.

- Extended unit tests. See method unitTestsGMCP.
  Option extended=TRUE will run small power simulations.
  Option java=TRUE will run JUnit tests for GUI testing.

Changes in version 0.7-10 (15-06-2012, Rev. 1291)
================================================

- New self test function doUnitTestsForGMCP to check whether
  the R unit test suite for gMCP can complete without errors.

- To reduce problems for older systems our C code does not contain 
  any C99 features any more. (For R > 2.12 an ISO C99 C compiler is 
  required. For older systems this was not the case.)
  
- Added option "exhaustAlpha" directly to the gMCP function to allow 
  non-alpha-exhaustive parametric tests. Also a note is given
  if exhaustAlpha=TRUE would change the result.  
  
   18 files changed, 137 insertions(+), 47 deletions(-)


Changes in version 0.7-9 (07-05-2012, Rev. 1277)
================================================

- calcPower gained a parameter "cr" for specifying
  a correlation for parametric power simulations. 

- Added option to allow non-alpha-exhaustive parametric tests.

- Improved dialog in GUI for power simulations, 
  including multiple settings for power analysis.

- Improved font size adjustment for edge labels.

- Show syntax error instead of infinite loop if an unparseable edge weight is entered. 

 33 files changed, 720 insertions(+), 190 deletions(-)
 

Changes in version 0.7-8 (06-03-2012, Rev. 1252)
================================================

- Edges can be created by drag'n'drop. 
  (Drag from the first node and drop on the second node.)
  
- Button to add edges stays pressed down until it is pressed again (or edges are added).
  This allows faster creation of graphs with many nodes.
