@@ -174,6 +174,14 @@
 	publisher = {Wiley Online Library}
 }
 
+@article{ferber2011structured,
+  title={Structured multiplicity and confirmatory statistical analyses in pharmacodynamic studies using the quantitative electroencephalogram},
+  author={Ferber, G. and Staner, L. and Boeijinga, P.},
+  journal={Journal of neuroscience methods},
+  year={2011},
+  publisher={Elsevier}
+}
+
 @manual{graph,
 	title = {graph: A package to handle graph data structures},
 	author = {Gentleman, {R.} and Whalen, {E.} and Huber, {W.} and Falcon, {S.}},
