@@ -32,6 +32,8 @@ Changes in version 0.7-11 (??-??-2012, Rev. 13??)
 - Extended unit tests. See method unitTestsGMCP.
   Option extended=TRUE will run small power simulations.
   Option java=TRUE will run JUnit tests for GUI testing.
+  
+- New example graph from Ferber et al. 2011.
 
 Changes in version 0.7-10 (15-06-2012, Rev. 1291)
 ================================================
